[gd_scene load_steps=4 format=2]

[ext_resource path="res://WeaponBasis.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Weapons/muzzle_flash_02.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "shot"
length = 0.05
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("muzzle_flash_02:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("muzzle_flash_02:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.4, 0.2 ) ]
}

[node name="WeaponBasis" type="Node2D"]
script = ExtResource( 1 )

[node name="muzzle_flash_02" type="Sprite" parent="."]
visible = false
position = Vector2( 132.639, -0.297409 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
offset = Vector2( 98.0151, 2.97409 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shot = SubResource( 1 )

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="BulletSpawnPosition" type="Position2D" parent="."]
position = Vector2( 90.7689, 0 )

[node name="BulletDirection" type="Position2D" parent="."]
position = Vector2( 130.147, 0 )

[node name="Cooldown" type="Timer" parent="."]

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
